2010-05-20  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Debugging.Client/DebuggerSession.cs: Dispose
	  asynchronously.

2010-05-20  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Debugging.Evaluation/BaseBacktrace.cs:
	* Mono.Debugging.Evaluation/ExceptionInfoSource.cs: Fix crash
	  when getting locals which include the last thrown exception.

2010-05-19  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* Mono.Debugging.csproj:
	* Mono.Debugging.Client/StackFrame.cs:
	* Mono.Debugging.Backend/IBacktrace.cs:
	* Mono.Debugging.Client/ExceptionInfo.cs:
	* Mono.Debugging.Evaluation/BaseBacktrace.cs:
	* Mono.Debugging.Evaluation/ExceptionInfoSource.cs: Introduced
	  ExceptionInfo, which provides information about a caught
	  exception, including description and stack traces.

	* Mono.Debugging.Client/RawValue.cs:
	* Mono.Debugging.Evaluation/RemoteRawValue.cs:
	* Mono.Debugging.Backend/IObjectValueSource.cs: Added
	  evaluation options to raw value methods.

	* Mono.Debugging.Client/ObjectValue.cs: Connect children
	  directly added to the object value. Propagate eval options
	  to raw value objects.

2010-05-11  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Debugging.Evaluation/AsyncOperationManager.cs: Fixed
	  deadlock while shuting down.

2010-05-07  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Debugging.Client/StackFrame.cs: Added HasDebugInfo
	  argument. When set to true, the stack frame won't try to get
	  any information from the underlaying frame.

2010-05-07  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Debugging.Evaluation/NRefactoryEvaluator.cs: Fix
	  support for variable definition. Implement support for
	  pre/post increment/decrement.

2010-05-07  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Debugging.csproj:
	* Mono.Debugging.Client/StackFrame.cs:
	* Mono.Debugging.Client/ObjectValue.cs:
	* Mono.Debugging.Client/DebuggerSession.cs:
	* Mono.Debugging.Evaluation/RawViewSource.cs:
	* Mono.Debugging.Evaluation/ValueReference.cs: